Fixed overflow of AOS fade up elements onto navbar

--- a/css/main.css
+++ b/css/main.css
@@ -379,7 +379,6 @@ nav li a:hover {
 	height: 100%;
 	width: 0;
 	position: fixed;
-	z-index: 1;
 	top: 0;
 	left: 0;
 	background: #fff;
